# avila-analytics-ga4

./: .env.example  .gitignore  CNAME  Cargo.toml  DEPLOY.md  Dockerfile  QUICKSTART.md  README.md  READY-TO-DEPLOY.md  build-frontend.ps1  build-frontend.sh  config.toml  deploy.ps1  deploy.sh  docker-compose.yml  index.html  package.json
avx-analytics-ga4/: Cargo.toml
avx-analytics-ga4/src/: client.rs  error.rs  events.rs  lib.rs  privacy.rs  query.rs  server.rs  user.rs
docs/: ARCHITECTURE.md  EXECUTIVE_SUMMARY.md  INTEGRATION_ANALYSIS.md  INTEGRATION_GUIDE_PYTHON.md  INTEGRATION_GUIDE_RUST.md  INTEGRATION_GUIDE_TYPESCRIPT.md  INTEGRATION_GUIDE_WEBSITES.md  README.md
examples/: basic_tracking.rs  ecommerce_tracking.rs  realtime_dashboard.rs
frontend/: README.md
frontend/static/: demo.html  index.html  quickstart.html  styles.css
frontend/tracker/: avila-tracker.js
frontend/wasm-dashboard/: Cargo.toml
frontend/wasm-dashboard/src/: lib.rs
frontend/wasm-dashboard/src/api/: mod.rs
frontend/wasm-dashboard/src/charts/: bar_chart.rs  line_chart.rs  mod.rs  pie_chart.rs
frontend/wasm-dashboard/src/components/: dashboard.rs  event_list.rs  header.rs  metric_card.rs  mod.rs  realtime_chart.rs  sidebar.rs
frontend/wasm-dashboard/src/utils/: mod.rs
scripts/: init-db.sql
src/: collector.rs  config.rs  models.rs  processor.rs  session.rs  storage.rs
