[workspace]
members = [
    "avx-analytics-ga4",
    # "avx-analises",
    # Add other members as they are created
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Arxis Team"]
license = "MIT"
repository = "https://github.com/avilaops/arxis"
keywords = ["rust", "analytics", "data", "machine-learning", "web"]
categories = ["development-tools", "science", "web-programming"]
