[package]
name = "avx-analytics-ga4"
version = "0.1.0"
edition = "2021"
authors = ["Arxis Team"]
description = "Enterprise-grade web analytics engine - 100% Rust implementation"
license = "MIT"
repository = "https://github.com/avilaops/arxis"
keywords = ["analytics", "ga4", "telemetry", "metrics", "tracking"]
categories = ["web-programming", "database", "development-tools"]

[dependencies]
# Core dependencies from arxis workspace
# avila-telemetry = { path = "../analytics-engine" }
# avila-crypto = { path = "../avila-crypto" }
# aviladb = { path = "../avila-db" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde", "parsing"] }

# UUID and hashing
uuid = { version = "1.6", features = ["v4", "serde"] }
blake3 = "1.5"
sha2 = "0.10"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Metrics and observability
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"

# Configuration
config = "0.14"
toml = "0.8"
num_cpus = "1.16"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# WebAssembly support
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true }

# Privacy and compliance
aes-gcm = "0.10"
argon2 = "0.5"

# Data processing
rayon = "1.8"
crossbeam = "0.8"

# CLI
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"
tempfile = "3.8"
test-log = "0.2"

[features]
default = ["full"]
full = ["web", "cli", "wasm"]
web = []
cli = []
wasm = ["wasm-bindgen", "web-sys"]

[[bin]]
name = "avila-analytics"
path = "src/bin/server.rs"

[[bin]]
name = "avila-analytics-cli"
path = "src/bin/cli.rs"

[[example]]
name = "basic_tracking"
path = "examples/basic_tracking.rs"

[[example]]
name = "ecommerce_tracking"
path = "examples/ecommerce_tracking.rs"

[[example]]
name = "realtime_dashboard"
path = "examples/realtime_dashboard.rs"
