[package]
name = "avila-dashboard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Text",
    "EventTarget",
    "Event",
    "MouseEvent",
    "HtmlInputElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
chrono = { version = "0.4", features = ["wasmbind"] }
gloo-timers = "0.3"
gloo-net = { version = "0.5", features = ["websocket"] }

[dependencies.yew]
version = "0.21"
features = ["csr"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
